fix: update input shaper config

--- a/printer.cfg
+++ b/printer.cfg
@@ -162,7 +162,7 @@ probe_points:
 [input_shaper]
 shaper_freq_y: 52.6
 shaper_type_y: 2hump_ei
-shaper_freq_x: 56.0 # meassured on 27.04.2022
+shaper_freq_x: 55.0
 shaper_type_x: mzv
 
 #uncomment the following lines to use Z_TILT_ADJUST and uncomment G34 Macro to use G34
