--- a/printer.cfg
+++ b/printer.cfg
@@ -160,9 +160,9 @@ probe_points:
     150, 150, 20  # an example
 
 [input_shaper]
-shaper_freq_y: 52.6
-shaper_type_y: 2hump_ei
-shaper_freq_x: 55.0
+shaper_freq_y: 35.4  # max accel: 3700 mm/s^2
+shaper_type_y: mzv
+shaper_freq_x: 55.0  # max accel: 8800 mm/s^2
 shaper_type_x: mzv
 
 #uncomment the following lines to use Z_TILT_ADJUST and uncomment G34 Macro to use G34
